--- a/src/index.css
+++ b/src/index.css
@@ -1,116 +1,74 @@
-.button {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: flex-end;
-  background-color: #000;
-  color: #fff;
-  font-size: 16px;
-  letter-spacing: 1px;
-  border: 0.5px solid rgba(0, 0, 0, 0.1);
-  padding-bottom: 8px;
-  height: 65px;
-  width: 200px;
-  padding: 12px;
-  border-radius: 15px 15px 12px 12px;
-  cursor: pointer;
+button {
   position: relative;
-  will-change: transform;
-  transition: all .1s ease-in-out 0s;
-  user-select: none;
-  /* Add gradient shading to each side */
-  background-image: linear-gradient(to right, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0)),
-    linear-gradient(to bottom, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0));
-  background-position: bottom right, bottom right;
-  background-size: 100% 100%, 100% 100%;
-  background-repeat: no-repeat;
-  box-shadow: inset -4px -10px 0px rgba(255, 255, 255, 0.4),
-    inset -4px -8px 0px rgba(0, 0, 0, 0.3),
-    0px 2px 1px rgba(0, 0, 0, 0.3),
-    0px 2px 1px rgba(255, 255, 255, 0.1);
-  transform: perspective(70px) rotateX(5deg) rotateY(0deg);
-}
-
-.button span {
-  transform: translateY(-10px);
-}
-
-.button::after {
-  content: '';
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.2), rgba(0, 0, 0, 0.5));
-  z-index: -1;
-  border-radius: 15px;
-  box-shadow: inset 4px 0px 0px rgba(255, 255, 255, 0.1),
-    inset 4px -8px 0px rgba(0, 0, 0, 0.3);
-  transition: all .1s ease-in-out 0s;
-}
-
-.button::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background-image: linear-gradient(to right, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0)),
-    linear-gradient(to bottom, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0));
-  background-position: bottom right, bottom right;
-  background-size: 100% 100%, 100% 100%;
-  background-repeat: no-repeat;
-  z-index: -1;
-  border-radius: 15px;
-  transition: all .1s ease-in-out 0s;
-}
-
-.button:active {
-  will-change: transform;
-  transform: perspective(80px) rotateX(5deg) rotateY(1deg) translateY(3px) scale(0.96);
-  height: 64px;
-  border: 0.25px solid rgba(0, 0, 0, 0.2);
-  box-shadow: inset -4px -8px 0px rgba(255, 255, 255, 0.2),
-    inset -4px -6px 0px rgba(0, 0, 0, 0.8),
-    0px 1px 0px rgba(0, 0, 0, 0.9),
-    0px 1px 0px rgba(255, 255, 255, 0.2);
-  transition: all .1s ease-in-out 0s;
-}
-
-.button::after:active {
-  background-image: linear-gradient(to bottom,rgba(0, 0, 0, 0.5), rgba(255, 255, 255, 0.2));
-}
-
-.button:active::before {
-  content: "";
-  display: block;
-  position: absolute;
-  top: 5%;
-  left: 20%;
-  width: 50%;
-  height: 80%;
-  background-color: rgba(255, 255, 255, 0.1);
-  animation: overlay 0.1s ease-in-out 0s;
-  pointer-events: none;
-}
-
-.button svg {
-  width: 15px;
-  height: 15px;
-}
-
-@keyframes overlay {
-  from {
-    opacity: 0;
-  }
-
-  to {
-    opacity: 1;
-  }
-}
-
-.button:focus {
+  display: inline-block;
+  cursor: pointer;
   outline: none;
-}
+  border: 0;
+  vertical-align: middle;
+  text-decoration: none;
+  font-family: inherit;
+  font-size: 15px;
+ }
+ *{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+ }
+ 
+ button.learn-more {
+  font-weight: 600;
+  color: #382b22;
+  text-transform: uppercase;
+  padding: 1.25em 2em;
+  background: #fff0f0;
+  border: 2px solid #b18597;
+  border-radius: 0.75em;
+  -webkit-transform-style: preserve-3d;
+  transform-style: preserve-3d;
+  -webkit-transition: background 150ms cubic-bezier(0, 0, 0.58, 1), -webkit-transform 150ms cubic-bezier(0, 0, 0.58, 1);
+  transition: transform 150ms cubic-bezier(0, 0, 0.58, 1), background 150ms cubic-bezier(0, 0, 0.58, 1), -webkit-transform 150ms cubic-bezier(0, 0, 0.58, 1);
+ }
+ 
+ button.learn-more::before {
+  position: absolute;
+  content: '';
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: #f9c4d2;
+  border-radius: inherit;
+  -webkit-box-shadow: 0 0 0 2px #b18597, 0 0.625em 0 0 #ffe3e2;
+  box-shadow: 0 0 0 2px #b18597, 0 0.625em 0 0 #ffe3e2;
+  -webkit-transform: translate3d(0, 0.75em, -1em);
+  transform: translate3d(0, 0.75em, -1em);
+  transition: transform 150ms cubic-bezier(0, 0, 0.58, 1), box-shadow 150ms cubic-bezier(0, 0, 0.58, 1), -webkit-transform 150ms cubic-bezier(0, 0, 0.58, 1), -webkit-box-shadow 150ms cubic-bezier(0, 0, 0.58, 1);
+ }
+ 
+ button.learn-more:hover {
+  background: #ffe9e9;
+  -webkit-transform: translate(0, 0.25em);
+  transform: translate(0, 0.25em);
+ }
+ 
+ button.learn-more:hover::before {
+  -webkit-box-shadow: 0 0 0 2px #b18597, 0 0.5em 0 0 #ffe3e2;
+  box-shadow: 0 0 0 2px #b18597, 0 0.5em 0 0 #ffe3e2;
+  -webkit-transform: translate3d(0, 0.5em, -1em);
+  transform: translate3d(0, 0.5em, -1em);
+ }
+ 
+ button.learn-more:active {
+  background: #ffe9e9;
+  -webkit-transform: translate(0em, 0.75em);
+  transform: translate(0em, 0.75em);
+ }
+ 
+ button.learn-more:active::before {
+  -webkit-box-shadow: 0 0 0 2px #b18597, 0 0 #ffe3e2;
+  box-shadow: 0 0 0 2px #b18597, 0 0 #ffe3e2;
+  -webkit-transform: translate3d(0, 0, -1em);
+  transform: translate3d(0, 0, -1em);
+ }
